--- a/css/variables.css
+++ b/css/variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Wed, 11 Jan 2023 14:29:27 GMT
+ * Generated on Wed, 11 Jan 2023 16:06:50 GMT
  */
 
 :root {
@@ -8,7 +8,7 @@
   --token-set-order-1: light;
   --token-set-order-2: dark;
   --token-set-order-3: theme;
-  --button-primary-background: #c3002f;
+  --button-primary-background: #5a67d8;
   --button-primary-text: #ffffff;
   --button-border-radius: 6;
   --button-border-width: 8;
@@ -27,7 +27,7 @@
   --bg-default: #1a202c;
   --bg-muted: #4a5568;
   --bg-subtle: #718096;
-  --accent-default: #c3002f;
+  --accent-default: #5a67d8;
   --accent-on-accent: #ffffff;
   --accent-bg: #434190;
   --shadows-default: #0000004d;
@@ -118,7 +118,7 @@
   --colors-indigo-300: #a3bffa;
   --colors-indigo-400: #7f9cf5;
   --colors-indigo-500: #667eea;
-  --colors-indigo-600: #c3002f;
+  --colors-indigo-600: #5a67d8;
   --colors-indigo-700: #4c51bf;
   --colors-indigo-800: #434190;
   --colors-indigo-900: #3c366b;
