--- a/css/variables.css
+++ b/css/variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Wed, 11 Jan 2023 16:06:50 GMT
+ * Generated on Thu, 12 Jan 2023 15:40:12 GMT
  */
 
 :root {
@@ -15,12 +15,47 @@
   --card-border-radius: 8;
   --card-background: #1a202c;
   --card-padding: 16;
-  --box-shadow-default: [object Object],[object Object];
-  --typography-h1-bold: [object Object];
-  --typography-h1-regular: [object Object];
-  --typography-h2-bold: [object Object];
-  --typography-h2-regular: [object Object];
-  --typography-body: [object Object];
+  --box-shadow-default-0-x: 5;
+  --box-shadow-default-0-y: 5;
+  --box-shadow-default-0-spread: 3;
+  --box-shadow-default-0-color: #00000026;
+  --box-shadow-default-0-blur: 5;
+  --box-shadow-default-0-type: dropShadow;
+  --box-shadow-default-1-x: 4;
+  --box-shadow-default-1-y: 4;
+  --box-shadow-default-1-spread: 6;
+  --box-shadow-default-1-color: #00000033;
+  --box-shadow-default-1-blur: 5;
+  --box-shadow-default-1-type: innerShadow;
+  --typography-h1-bold-font-family: Inter;
+  --typography-h1-bold-font-weight: Bold;
+  --typography-h1-bold-line-height: 110%;
+  --typography-h1-bold-font-size: 48.829;
+  --typography-h1-bold-paragraph-spacing: 32;
+  --typography-h1-bold-letter-spacing: -5%;
+  --typography-h1-regular-font-family: Inter;
+  --typography-h1-regular-font-weight: Regular;
+  --typography-h1-regular-line-height: 110%;
+  --typography-h1-regular-font-size: 48.829;
+  --typography-h1-regular-paragraph-spacing: 32;
+  --typography-h1-regular-letter-spacing: -5%;
+  --typography-h2-bold-font-family: Inter;
+  --typography-h2-bold-font-weight: Bold;
+  --typography-h2-bold-line-height: 110%;
+  --typography-h2-bold-font-size: 39.063;
+  --typography-h2-bold-paragraph-spacing: 26;
+  --typography-h2-bold-letter-spacing: -5%;
+  --typography-h2-regular-font-family: Inter;
+  --typography-h2-regular-font-weight: Regular;
+  --typography-h2-regular-line-height: 110%;
+  --typography-h2-regular-font-size: 39.063;
+  --typography-h2-regular-paragraph-spacing: 26;
+  --typography-h2-regular-letter-spacing: -5%;
+  --typography-body-font-family: Roboto;
+  --typography-body-font-weight: Regular;
+  --typography-body-line-height: 110%;
+  --typography-body-font-size: 16;
+  --typography-body-paragraph-spacing: 26;
   --fg-default: #ffffff;
   --fg-muted: #e2e8f0;
   --fg-subtle: #a0aec0;
