--- a/paleta/css/variables.css
+++ b/paleta/css/variables.css
@@ -1,203 +1,150 @@
 /**
  * Do not edit directly
- * Generated on Wed, 08 Mar 2023 15:40:20 GMT
+ * Generated on Wed, 08 Mar 2023 15:57:15 GMT
  */
 
 :root {
-  --token-set-order-0: core;
-  --token-set-order-1: light;
-  --token-set-order-2: dark;
-  --token-set-order-3: theme;
-  --button-primary-background: #5a67d8;
-  --button-primary-text: #ffffff;
-  --button-border-radius: 6;
-  --button-border-width: 8;
-  --card-border-radius: 8;
-  --card-background: #1a202c;
-  --card-padding: 16;
-  --box-shadow-default-0-x: 5;
-  --box-shadow-default-0-y: 5;
-  --box-shadow-default-0-spread: 3;
-  --box-shadow-default-0-color: #00000026;
-  --box-shadow-default-0-blur: 5;
-  --box-shadow-default-0-type: dropShadow;
-  --box-shadow-default-1-x: 4;
-  --box-shadow-default-1-y: 4;
-  --box-shadow-default-1-spread: 6;
-  --box-shadow-default-1-color: #00000033;
-  --box-shadow-default-1-blur: 5;
-  --box-shadow-default-1-type: innerShadow;
-  --typography-h1-bold-font-family: Inter;
-  --typography-h1-bold-font-weight: Bold;
-  --typography-h1-bold-line-height: 110%;
-  --typography-h1-bold-font-size: 48.829;
-  --typography-h1-bold-paragraph-spacing: 32;
-  --typography-h1-bold-letter-spacing: -5%;
-  --typography-h1-regular-font-family: Inter;
-  --typography-h1-regular-font-weight: Regular;
-  --typography-h1-regular-line-height: 110%;
-  --typography-h1-regular-font-size: 48.829;
-  --typography-h1-regular-paragraph-spacing: 32;
-  --typography-h1-regular-letter-spacing: -5%;
-  --typography-h2-bold-font-family: Inter;
-  --typography-h2-bold-font-weight: Bold;
-  --typography-h2-bold-line-height: 110%;
-  --typography-h2-bold-font-size: 39.063;
-  --typography-h2-bold-paragraph-spacing: 26;
-  --typography-h2-bold-letter-spacing: -5%;
-  --typography-h2-regular-font-family: Inter;
-  --typography-h2-regular-font-weight: Regular;
-  --typography-h2-regular-line-height: 110%;
-  --typography-h2-regular-font-size: 39.063;
-  --typography-h2-regular-paragraph-spacing: 26;
-  --typography-h2-regular-letter-spacing: -5%;
-  --typography-body-font-family: Roboto;
-  --typography-body-font-weight: Regular;
-  --typography-body-line-height: 110%;
-  --typography-body-font-size: 16;
-  --typography-body-paragraph-spacing: 26;
-  --fg-default: #ffffff;
-  --fg-muted: #e2e8f0;
-  --fg-subtle: #a0aec0;
-  --bg-default: #1a202c;
-  --bg-muted: #4a5568;
-  --bg-subtle: #718096;
-  --accent-default: #5a67d8;
-  --accent-on-accent: #ffffff;
-  --accent-bg: #434190;
-  --shadows-default: #0000004d;
-  --dimension-scale: 2;
-  --dimension-xs: 4;
-  --dimension-sm: 8;
-  --dimension-md: 16;
-  --dimension-lg: 32;
-  --dimension-xl: 64;
-  --spacing-xs: 4;
-  --spacing-sm: 8;
-  --spacing-md: 16;
-  --spacing-lg: 32;
-  --spacing-xl: 64;
-  --spacing-multi-value: 8 64;
-  --border-radius-sm: 4;
-  --border-radius-lg: 8;
-  --border-radius-xl: 16;
-  --border-radius-multi-value: 4 8;
-  --border-radius-md: 6;
-  --colors-black: #000000;
-  --colors-white: #ffffff;
-  --colors-gray-100: #f7fafc;
-  --colors-gray-200: #edf2f7;
-  --colors-gray-300: #e2e8f0;
-  --colors-gray-400: #cbd5e0;
-  --colors-gray-500: #a0aec0;
-  --colors-gray-600: #718096;
-  --colors-gray-700: #4a5568;
-  --colors-gray-800: #2d3748;
-  --colors-gray-900: #1a202c;
-  --colors-red-100: #fff5f5;
-  --colors-red-200: #fed7d7;
-  --colors-red-300: #feb2b2;
-  --colors-red-400: #fc8181;
-  --colors-red-500: #f56565;
-  --colors-red-600: #e53e3e;
-  --colors-red-700: #c53030;
-  --colors-red-800: #9b2c2c;
-  --colors-red-900: #742a2a;
-  --colors-orange-100: #fffaf0;
-  --colors-orange-200: #feebc8;
-  --colors-orange-300: #fbd38d;
-  --colors-orange-400: #f6ad55;
-  --colors-orange-500: #ed8936;
-  --colors-orange-600: #dd6b20;
-  --colors-orange-700: #c05621;
-  --colors-orange-800: #9c4221;
-  --colors-orange-900: #7b341e;
-  --colors-yellow-100: #fffff0;
-  --colors-yellow-200: #fefcbf;
-  --colors-yellow-300: #faf089;
-  --colors-yellow-400: #f6e05e;
-  --colors-yellow-500: #ecc94b;
-  --colors-yellow-600: #d69e2e;
-  --colors-yellow-700: #b7791f;
-  --colors-yellow-800: #975a16;
-  --colors-yellow-900: #744210;
-  --colors-green-100: #f0fff4;
-  --colors-green-200: #c6f6d5;
-  --colors-green-300: #9ae6b4;
-  --colors-green-400: #68d391;
-  --colors-green-500: #48bb78;
-  --colors-green-600: #38a169;
-  --colors-green-700: #2f855a;
-  --colors-green-800: #276749;
-  --colors-green-900: #22543d;
-  --colors-teal-100: #e6fffa;
-  --colors-teal-200: #b2f5ea;
-  --colors-teal-300: #81e6d9;
-  --colors-teal-400: #4fd1c5;
-  --colors-teal-500: #38b2ac;
-  --colors-teal-600: #319795;
-  --colors-teal-700: #2c7a7b;
-  --colors-teal-800: #285e61;
-  --colors-teal-900: #234e52;
-  --colors-blue-100: #ebf8ff;
-  --colors-blue-200: #bee3f8;
-  --colors-blue-300: #90cdf4;
-  --colors-blue-400: #63b3ed;
-  --colors-blue-500: #4299e1;
-  --colors-blue-600: #3182ce;
-  --colors-blue-700: #2b6cb0;
-  --colors-blue-800: #2c5282;
-  --colors-blue-900: #2a4365;
-  --colors-indigo-100: #ebf4ff;
-  --colors-indigo-200: #c3dafe;
-  --colors-indigo-300: #a3bffa;
-  --colors-indigo-400: #7f9cf5;
-  --colors-indigo-500: #667eea;
-  --colors-indigo-600: #5a67d8;
-  --colors-indigo-700: #4c51bf;
-  --colors-indigo-800: #434190;
-  --colors-indigo-900: #3c366b;
-  --colors-purple-100: #faf5ff;
-  --colors-purple-200: #e9d8fd;
-  --colors-purple-300: #d6bcfa;
-  --colors-purple-400: #b794f4;
-  --colors-purple-500: #9f7aea;
-  --colors-purple-600: #805ad5;
-  --colors-purple-700: #6b46c1;
-  --colors-purple-800: #553c9a;
-  --colors-purple-900: #44337a;
-  --colors-pink-100: #fff5f7;
-  --colors-pink-200: #fed7e2;
-  --colors-pink-300: #fbb6ce;
-  --colors-pink-400: #f687b3;
-  --colors-pink-500: #ed64a6;
-  --colors-pink-600: #d53f8c;
-  --colors-pink-700: #b83280;
-  --colors-pink-800: #97266d;
-  --colors-pink-900: #702459;
-  --opacity-low: 10%;
-  --opacity-md: 50%;
-  --opacity-high: 90%;
-  --font-families-heading: Inter;
-  --font-families-body: Roboto;
-  --line-heights-heading: 110%;
-  --line-heights-body: 140%;
-  --letter-spacing-default: 0;
-  --letter-spacing-increased: 150%;
-  --letter-spacing-decreased: -5%;
-  --paragraph-spacing-h1: 32;
-  --paragraph-spacing-h2: 26;
-  --font-weights-heading-regular: Regular;
-  --font-weights-heading-bold: Bold;
-  --font-weights-body-regular: Regular;
-  --font-weights-body-bold: Bold;
-  --font-sizes-h1: 48.829;
-  --font-sizes-h2: 39.063;
-  --font-sizes-h3: 31.25;
-  --font-sizes-h4: 25;
-  --font-sizes-h5: 20;
-  --font-sizes-h6: 16;
-  --font-sizes-body: 16;
-  --font-sizes-sm: 13.6;
-  --font-sizes-xs: 10.4;
+  --token-set-order-0: global;
+  --material-theme-white: #ffffff;
+  --material-theme-black: #000000;
+  --material-theme-sys-light-primary: #6750a4;
+  --material-theme-sys-light-on-primary: #ffffff;
+  --material-theme-sys-light-primary-container: #eaddff;
+  --material-theme-sys-light-on-primary-container: #21005d;
+  --material-theme-sys-light-secondary: #625b71;
+  --material-theme-sys-light-on-secondary: #ffffff;
+  --material-theme-sys-light-secondary-container: #e8def8;
+  --material-theme-sys-light-on-secondary-container: #1d192b;
+  --material-theme-sys-light-tertiary: #7d5260;
+  --material-theme-sys-light-on-tertiary: #ffffff;
+  --material-theme-sys-light-tertiary-container: #ffd8e4;
+  --material-theme-sys-light-on-tertiary-container: #31111d;
+  --material-theme-sys-light-error: #b3261e;
+  --material-theme-sys-light-on-error: #ffffff;
+  --material-theme-sys-light-error-container: #f9dedc;
+  --material-theme-sys-light-on-error-container: #410e0b;
+  --material-theme-sys-light-outline: #79747e;
+  --material-theme-sys-light-background: #fffbfe;
+  --material-theme-sys-light-on-background: #1c1b1f;
+  --material-theme-sys-light-surface: #fffbfe;
+  --material-theme-sys-light-on-surface: #1c1b1f;
+  --material-theme-sys-light-surface-variant: #e7e0ec;
+  --material-theme-sys-light-on-surface-variant: #49454f;
+  --material-theme-sys-light-inverse-surface: #313033;
+  --material-theme-sys-light-inverse-on-surface: #f4eff4;
+  --material-theme-sys-light-inverse-primary: #d0bcff;
+  --material-theme-sys-light-shadow: #000000;
+  --material-theme-sys-light-surface-tint: #6750a4;
+  --material-theme-sys-light-outline-variant: #cac4d0;
+  --material-theme-sys-light-scrim: #000000;
+  --material-theme-sys-dark-primary: #d0bcff;
+  --material-theme-sys-dark-on-primary: #381e72;
+  --material-theme-sys-dark-primary-container: #4f378b;
+  --material-theme-sys-dark-on-primary-container: #eaddff;
+  --material-theme-sys-dark-secondary: #ccc2dc;
+  --material-theme-sys-dark-on-secondary: #332d41;
+  --material-theme-sys-dark-secondary-container: #4a4458;
+  --material-theme-sys-dark-on-secondary-container: #e8def8;
+  --material-theme-sys-dark-tertiary: #efb8c8;
+  --material-theme-sys-dark-on-tertiary: #492532;
+  --material-theme-sys-dark-tertiary-container: #633b48;
+  --material-theme-sys-dark-on-tertiary-container: #ffd8e4;
+  --material-theme-sys-dark-error: #f2b8b5;
+  --material-theme-sys-dark-on-error: #601410;
+  --material-theme-sys-dark-error-container: #8c1d18;
+  --material-theme-sys-dark-on-error-container: #f9dedc;
+  --material-theme-sys-dark-outline: #938f99;
+  --material-theme-sys-dark-background: #1c1b1f;
+  --material-theme-sys-dark-on-background: #e6e1e5;
+  --material-theme-sys-dark-surface: #1c1b1f;
+  --material-theme-sys-dark-on-surface: #e6e1e5;
+  --material-theme-sys-dark-surface-variant: #49454f;
+  --material-theme-sys-dark-on-surface-variant: #cac4d0;
+  --material-theme-sys-dark-inverse-surface: #e6e1e5;
+  --material-theme-sys-dark-inverse-on-surface: #313033;
+  --material-theme-sys-dark-inverse-primary: #6750a4;
+  --material-theme-sys-dark-shadow: #000000;
+  --material-theme-sys-dark-surface-tint: #d0bcff;
+  --material-theme-sys-dark-outline-variant: #49454f;
+  --material-theme-sys-dark-scrim: #000000;
+  --material-theme-ref-primary-primary0: #000000;
+  --material-theme-ref-primary-primary10: #21005d;
+  --material-theme-ref-primary-primary20: #381e72;
+  --material-theme-ref-primary-primary30: #4f378b;
+  --material-theme-ref-primary-primary40: #6750a4;
+  --material-theme-ref-primary-primary50: #7f67be;
+  --material-theme-ref-primary-primary60: #9a82db;
+  --material-theme-ref-primary-primary70: #b69df8;
+  --material-theme-ref-primary-primary80: #d0bcff;
+  --material-theme-ref-primary-primary90: #eaddff;
+  --material-theme-ref-primary-primary95: #f6edff;
+  --material-theme-ref-primary-primary99: #fffbfe;
+  --material-theme-ref-primary-primary100: #ffffff;
+  --material-theme-ref-secondary-secondary0: #000000;
+  --material-theme-ref-secondary-secondary10: #1d192b;
+  --material-theme-ref-secondary-secondary20: #332d41;
+  --material-theme-ref-secondary-secondary30: #4a4458;
+  --material-theme-ref-secondary-secondary40: #625b71;
+  --material-theme-ref-secondary-secondary50: #7a7289;
+  --material-theme-ref-secondary-secondary60: #958da5;
+  --material-theme-ref-secondary-secondary70: #b0a7c0;
+  --material-theme-ref-secondary-secondary80: #ccc2dc;
+  --material-theme-ref-secondary-secondary90: #e8def8;
+  --material-theme-ref-secondary-secondary95: #f6edff;
+  --material-theme-ref-secondary-secondary99: #fffbfe;
+  --material-theme-ref-secondary-secondary100: #ffffff;
+  --material-theme-ref-tertiary-tertiary0: #000000;
+  --material-theme-ref-tertiary-tertiary10: #31111d;
+  --material-theme-ref-tertiary-tertiary20: #492532;
+  --material-theme-ref-tertiary-tertiary30: #633b48;
+  --material-theme-ref-tertiary-tertiary40: #7d5260;
+  --material-theme-ref-tertiary-tertiary50: #986977;
+  --material-theme-ref-tertiary-tertiary60: #b58392;
+  --material-theme-ref-tertiary-tertiary70: #d29dac;
+  --material-theme-ref-tertiary-tertiary80: #efb8c8;
+  --material-theme-ref-tertiary-tertiary90: #ffd8e4;
+  --material-theme-ref-tertiary-tertiary95: #ffecf1;
+  --material-theme-ref-tertiary-tertiary99: #fffbfa;
+  --material-theme-ref-tertiary-tertiary100: #ffffff;
+  --material-theme-ref-error-error0: #000000;
+  --material-theme-ref-error-error10: #410e0b;
+  --material-theme-ref-error-error20: #601410;
+  --material-theme-ref-error-error30: #8c1d18;
+  --material-theme-ref-error-error40: #b3261e;
+  --material-theme-ref-error-error50: #dc362e;
+  --material-theme-ref-error-error60: #e46962;
+  --material-theme-ref-error-error70: #ec928e;
+  --material-theme-ref-error-error80: #f2b8b5;
+  --material-theme-ref-error-error90: #f9dedc;
+  --material-theme-ref-error-error95: #fceeee;
+  --material-theme-ref-error-error99: #fffbf9;
+  --material-theme-ref-error-error100: #ffffff;
+  --material-theme-ref-neutral-neutral0: #000000;
+  --material-theme-ref-neutral-neutral10: #1c1b1f;
+  --material-theme-ref-neutral-neutral20: #313033;
+  --material-theme-ref-neutral-neutral30: #484649;
+  --material-theme-ref-neutral-neutral40: #605d62;
+  --material-theme-ref-neutral-neutral50: #787579;
+  --material-theme-ref-neutral-neutral60: #939094;
+  --material-theme-ref-neutral-neutral70: #aeaaae;
+  --material-theme-ref-neutral-neutral80: #c9c5ca;
+  --material-theme-ref-neutral-neutral90: #e6e1e5;
+  --material-theme-ref-neutral-neutral95: #f4eff4;
+  --material-theme-ref-neutral-neutral99: #fffbfe;
+  --material-theme-ref-neutral-neutral100: #ffffff;
+  --material-theme-ref-neutral-variant-neutral-variant0: #000000;
+  --material-theme-ref-neutral-variant-neutral-variant10: #1d1a22;
+  --material-theme-ref-neutral-variant-neutral-variant20: #322f37;
+  --material-theme-ref-neutral-variant-neutral-variant30: #49454f;
+  --material-theme-ref-neutral-variant-neutral-variant40: #605d66;
+  --material-theme-ref-neutral-variant-neutral-variant50: #79747e;
+  --material-theme-ref-neutral-variant-neutral-variant60: #938f99;
+  --material-theme-ref-neutral-variant-neutral-variant70: #aea9b4;
+  --material-theme-ref-neutral-variant-neutral-variant80: #cac4d0;
+  --material-theme-ref-neutral-variant-neutral-variant90: #e7e0ec;
+  --material-theme-ref-neutral-variant-neutral-variant95: #f5eefa;
+  --material-theme-ref-neutral-variant-neutral-variant99: #fffbfe;
+  --material-theme-ref-neutral-variant-neutral-variant100: #ffffff;
+  --material-theme-key-colors-primary: #6750a4;
+  --material-theme-source-seed: #6750a4;
 }
